--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "chromedriver": "^86.0.0",
     "cookie-parser": "~1.4.4",
+    "csv-writer": "^1.6.0",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "request-promise": "^4.2.6",
     "selenium-webdriver": "^4.0.0-alpha.7"
   }
 }
