--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
     "csv-writer": "^1.6.0",
+    "dayjs": "^1.9.6",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.11.4",
     "morgan": "~1.9.1",
     "request-promise": "^4.2.6",
     "selenium-webdriver": "^4.0.0-alpha.7"
