--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.11.4",
+    "mongoose-paginate-v2": "^1.3.12",
     "morgan": "~1.9.1",
     "request-promise": "^4.2.6",
     "selenium-webdriver": "^4.0.0-alpha.7"
