--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "dayjs": "^1.9.6",
     "debug": "~2.6.9",
